--- a/Lessons/S03-Lesson-Conditions-and-Managing-State/2.dataset-attributes.html
+++ b/Lessons/S03-Lesson-Conditions-and-Managing-State/2.dataset-attributes.html
@@ -18,13 +18,19 @@
 			| Dataset Attributes
 			-------------------------------------*/
 
+			window.onload=function() {
+
+				var orange = document.querySelectorAll('img.orange');
+				console.log('img.yellow.png');
+			}
+
 		</script>
 	</head>
 	<body>
 		<h1>Dataset Attributes</h1>
 
-		<img class="purple" 	src="./img/purple.png"	>
-		<img class="orange" 	src="./img/orange.png"	>
-		<img class="yellow" 	src="./img/yellow.png"	>
+		<img class="purple" data-photo='one'	src="./img/purple.png"	>
+		<img class="orange" data-photo='two'	src="./img/orange.png"	>
+		<img class="yellow" data-photo='three'	src="./img/yellow.png"	>
 	</body>
 </html>
