--- a/Lessons/S03-Lesson-Conditions-and-Managing-State/3.this-keyword.html
+++ b/Lessons/S03-Lesson-Conditions-and-Managing-State/3.this-keyword.html
@@ -15,6 +15,26 @@
 		</style>
 		<script>
 
+		window.onload =function() {
+
+		function clickMe(){
+
+			console.log(this);
+		}
+
+		clickMe();
+
+		var images =document.querySelectorAll('.dials img');
+
+		console.log(images[0]);
+
+		images[0].addEventListener('click', clickMe);
+		images[1].addEventListener('click', clickMe);
+	  images[2].addEventListener('click', clickMe);
+
+		}
+
+
 		</script>
 	</head>
 	<body>
