add more projects

--- a/Lessons/S05-Lesson-Conditions/1.conditions.html
+++ b/Lessons/S05-Lesson-Conditions/1.conditions.html
@@ -105,7 +105,7 @@
 					showHideText.innerHTML ='Hide';
 			 }else
 			 {
-				 departureDetails.style.display ="none";
+				 departureDetails.style.display =="block";
 					console.log('B!');
 					showHideText.innerHTML ='Show';
 			 }
